@@ -1,3 +1,7 @@
+2010-11-16  Jeff Segars  <jeff@webempoweredchurch.org>
+
+	* Added feature #7199: Add TypoScript options to remove spaces and file extensions from link text for uploads (Thanks to Steffen Ritter)
+
 2010-11-16  Christian Kuhn  <lolli@schwarzbu.ch>
 
 	* Added feature #16360: [saltedpasswords] Provide a task for bulk update of passwords for use with saltedpasswords (Thanks to Marcus Krause)
